--- a/ConversorApp/src/app/app.component.html
+++ b/ConversorApp/src/app/app.component.html
@@ -1,3 +1,31 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <!-- MENU LATERAL -->
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item routerLink="/coin" routerDirection="root">
+          <ion-icon name="cash-outline" slot="start"></ion-icon>
+          <ion-label>Conversor de Moedas</ion-label>
+        </ion-item>
+        <ion-item routerLink="/temperature" routerDirection="root">
+          <ion-icon name="thermometer-outline" slot="start"></ion-icon>
+          <ion-label>Conversor de Temperatura</ion-label>
+        </ion-item>
+        <ion-item routerLink="/length" routerDirection="root">
+          <ion-icon name="resize-outline" slot="start"></ion-icon>
+          <ion-label>Conversor de Comprimento</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <div id="main-content">
+    <ion-router-outlet></ion-router-outlet>
+  </div>
 </ion-app>
