--- a/ConversorApp/src/app/home/home.page.html
+++ b/ConversorApp/src/app/home/home.page.html
@@ -1,20 +1,28 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Conversor Numérico</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<div class="page-container">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Escolha uma conversão</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="12">
+            <ion-button expand="full" routerLink="/coin">Conversor de Moedas</ion-button>
+          </ion-col>
+          <ion-col size="12">
+            <ion-button expand="full" routerLink="/temperature">Conversor de Temperatura</ion-button>
+          </ion-col>
+          <ion-col size="12">
+            <ion-button expand="full" routerLink="/length">Conversor de Comprimento</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+</div>
