--- a/ConversorApp/src/app/length/length.page.html
+++ b/ConversorApp/src/app/length/length.page.html
@@ -1,13 +1,54 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>length</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Conversor de Comprimento</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">length</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<div class="page-container">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Converter Comprimento</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="floating">Valor</ion-label>
+        <ion-input type="number" [(ngModel)]="inputValue"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>De:</ion-label>
+        <ion-select [(ngModel)]="fromUnit">
+          <ion-select-option value="m">Metros (m)</ion-select-option>
+          <ion-select-option value="km">Quilômetros (km)</ion-select-option>
+          <ion-select-option value="mile">Milhas (mi)</ion-select-option>
+          <ion-select-option value="cm">Centímetros (cm)</ion-select-option>
+          <ion-select-option value="mm">Milímetros (mm)</ion-select-option>
+          <ion-select-option value="inch">Polegadas (in)</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Para:</ion-label>
+        <ion-select [(ngModel)]="toUnit">
+          <ion-select-option value="m">Metros (m)</ion-select-option>
+          <ion-select-option value="km">Quilômetros (km)</ion-select-option>
+          <ion-select-option value="mile">Milhas (mi)</ion-select-option>
+          <ion-select-option value="cm">Centímetros (cm)</ion-select-option>
+          <ion-select-option value="mm">Milímetros (mm)</ion-select-option>
+          <ion-select-option value="inch">Polegadas (in)</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-button expand="full" (click)="convertLength()">Converter</ion-button>
+
+      <ion-card *ngIf="convertedValue !== null">
+        <ion-card-content class="result-container">
+          <strong>Resultado:</strong> {{ convertedValue }} {{ unitSymbol }}
+        </ion-card-content>
+      </ion-card>
+    </ion-card-content>
+  </ion-card>
+</div>
