feat:add new pages

--- a/ConversorApp/src/app/app.component.html
+++ b/ConversorApp/src/app/app.component.html
@@ -8,6 +8,10 @@
     </ion-header>
     <ion-content>
       <ion-list>
+        <ion-item routerLink="/home" routerDirection="root">
+          <ion-icon name="home-outline" slot="start"></ion-icon>
+          <ion-label>Home</ion-label>
+        </ion-item>
         <ion-item routerLink="/coin" routerDirection="root">
           <ion-icon name="cash-outline" slot="start"></ion-icon>
           <ion-label>Conversor de Moedas</ion-label>
@@ -19,6 +23,14 @@
         <ion-item routerLink="/length" routerDirection="root">
           <ion-icon name="resize-outline" slot="start"></ion-icon>
           <ion-label>Conversor de Comprimento</ion-label>
+        </ion-item>
+        <ion-item routerLink="/speed" routerDirection="root">
+          <ion-icon name="speedometer-outline" slot="start"></ion-icon>
+          <ion-label>Conversor de Velocidade</ion-label>
+        </ion-item>
+        <ion-item routerLink="/time" routerDirection="root">
+          <ion-icon name="time-outline" slot="start"></ion-icon>
+          <ion-label>Conversor de Tempo</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
