--- a/ConversorApp/src/app/home/home.page.html
+++ b/ConversorApp/src/app/home/home.page.html
@@ -12,14 +12,24 @@
     <ion-card-content>
       <ion-grid>
         <ion-row>
-          <ion-col size="12">
-            <ion-button expand="full" routerLink="/coin">Conversor de Moedas</ion-button>
+          <ion-col size="6" class="button-col">
+            <ion-button expand="full" class="custom-button" routerLink="/coin">Conversor de Moedas</ion-button>
           </ion-col>
-          <ion-col size="12">
-            <ion-button expand="full" routerLink="/temperature">Conversor de Temperatura</ion-button>
+          <ion-col size="6" class="button-col">
+            <ion-button expand="full" class="custom-button" routerLink="/temperature">Conversor de Temperatura</ion-button>
           </ion-col>
-          <ion-col size="12">
-            <ion-button expand="full" routerLink="/length">Conversor de Comprimento</ion-button>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6" class="button-col">
+            <ion-button expand="full" class="custom-button" routerLink="/length">Conversor de Comprimento</ion-button>
+          </ion-col>
+          <ion-col size="6" class="button-col">
+            <ion-button expand="full" class="custom-button" routerLink="/speed">Conversor de Velocidade</ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12" class="button-col">
+            <ion-button expand="full" class="custom-button" routerLink="/time">Conversor de Tempo</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
