--- a/ConversorApp/src/app/home/home.page.scss
+++ b/ConversorApp/src/app/home/home.page.scss
@@ -1,31 +1,28 @@
 .page-container {
   display: flex;
-  justify-content: center; // Centraliza horizontalmente
-  align-items: center; // Centraliza verticalmente
-  height: 100vh; // Faz o container ocupar a altura total da viewport
-  padding: 20px; // Adiciona um pouco de padding ao redor do conteúdo
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 20px;
 }
 
 ion-card {
-  width: 100%; // Faz o card ocupar a largura total do container
-  max-width: 500px; // Define uma largura máxima para o card
-  padding: 20px; // Adiciona padding interno ao card
+  width: 100%;
+  max-width: 400px; /* Mantém um tamanho fixo para não ficar muito largo */
+  padding: 20px;
 }
 
 ion-card-title {
-  font-size: 24px; // Aumenta o tamanho da fonte do título
-  text-align: center; // Centraliza o texto do título
+  font-size: 24px;
+  text-align: center;
+  font-weight: bold;
 }
 
-ion-item {
-  margin-bottom: 20px; // Adiciona espaço entre os itens
+.button-col {
+  padding: 8px; /* Espaçamento entre os botões */
 }
 
-ion-button {
-  font-size: 18px; // Aumenta o tamanho da fonte do botão
-}
-
-h2 {
-  text-align: center; // Centraliza o texto do valor convertido
-  font-size: 20px; // Aumenta o tamanho da fonte do valor convertido
+.custom-button {
+  height: 80px; /* Botões maiores */
+  font-size: 0.9rem;
 }
